--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.7.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
@@ -22,6 +24,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.3
+Flask==3.0.3
 fonttools==4.50.0
 fqdn==1.5.1
 fsspec==2024.3.1
@@ -35,6 +38,7 @@ idna==3.6
 ipykernel==6.29.4
 ipython==8.23.0
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.3.2
@@ -134,3 +138,4 @@ wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
+Werkzeug==3.0.2
