--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+absl-py==2.1.0
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
+astunparse==1.6.3
 async-lru==2.0.4
 attrs==23.2.0
 Babel==2.14.0
@@ -25,13 +27,18 @@ executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.3
 Flask==3.0.3
+flatbuffers==24.3.25
 fonttools==4.50.0
 fqdn==1.5.1
 fsspec==2024.3.1
+gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.43
+google-pasta==0.2.0
+grpcio==1.62.1
 gunicorn==21.2.0
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.6
@@ -57,12 +64,19 @@ jupyterlab==4.1.5
 jupyterlab_git==0.50.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.4
+keras==3.2.1
 kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.3.2
 mpmath==1.3.0
+namex==0.0.8
 nbclient==0.10.0
 nbconvert==7.16.3
 nbdime==4.0.1
@@ -83,6 +97,8 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
+opt-einsum==3.3.0
+optree==0.11.0
 overrides==7.7.0
 packaging==24.0
 pandas==2.2.1
@@ -94,6 +110,7 @@ platformdirs==4.2.0
 plotly==5.20.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -109,6 +126,7 @@ referencing==0.34.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.18.0
 scikit-learn==1.4.1.post1
 scipy==1.13.0
@@ -121,6 +139,11 @@ soupsieve==2.5
 stack-data==0.6.3
 sympy==1.12
 tenacity==8.2.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
 terminado==0.18.1
 threadpoolctl==3.4.0
 tinycss2==1.2.1
@@ -139,3 +162,4 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
 Werkzeug==3.0.2
+wrapt==1.16.0
