--- a/requirements.txt
+++ b/requirements.txt
@@ -128,7 +128,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.18.0
-scikit-learn==1.4.1.post1
+scikit-learn==1.0.2
 scipy==1.13.0
 seaborn==0.13.2
 Send2Trash==1.8.2
